[build-system]
# Minimum requirements for the build system to execute
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "modflow-devtools"
description = "modflow-devtools"
readme = "README.md"
requires-python = ">=3.7"

[tool.black]
line-length = 79
target_version = ["py37"]

[tool.flynt]
line-length = 79
verbose = true

[tool.isort]
profile = "black"
src_paths = ["modflow_devtools", "autotest", ]
line_length = 79

[tool.setuptools.packages.find]
where = ["modflow_devtools"]

#[tool.poetry]
#include = ["modflow_devtools/utilities/usgsprograms.txt"]

[tool.setuptools_scm]
fallback_version = "999"
